# scraper

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  Rocket.tpl.toml  docker-compose.nvidia.yml  docker-compose.yml
migrations/0/: Media.json  Species.json  SpeciesMetadata.json  down.sql  up.sql
migrations/1/: IgnoredSpecies.json  Media.json  Occurrence.json  Species.json  down.sql  up.sql
python/: main.py  requirements.txt
scripts/: generate-csv.sh  generate-examples.sh
src/: config.rs  cropper.rs  db.rs  gbif.rs  lib.rs  logger.rs  main.rs  server.rs  taxref.rs  utils.rs
static/: colorbrewer-light.json  colorbrewer.json  plot.js
templates/: base.html  crop.html  index.html  index.html.tera  media.html  media.html.tera  plotly.html  species-key.html  species.html
