[package]
name = "scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.12", features = ["stream", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
rocket = { version = "0.5.1", features = ["json", "secrets" ] }
ergol = { version = "0.1.8", features = [ "with-uuid-1", "with-rocket" ], path = "/home/thomas/git/github.com/polymny/ergol/ergol" }
ergol_cli = { version = "0.1.8", path = "/home/thomas/git/github.com/polymny/ergol/cli" }
uuid = { version = "1.14.0", features = ["serde", "v4"] }
unidecode = "0.3.0"
serde_json = "1.0.139"
infer = "0.19.0"
log = "0.4.26"
chrono = "0.4.39"
tera = "1.20.0"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
