[package]
name = "scraper"
version = "0.0.9"
edition = "2024"

[dependencies]
dirs = "6.0.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.12", features = ["stream", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
rocket = { version = "0.5.1", features = ["json", "secrets" ] }
ergol = { version = "0.1.9", features = [ "with-uuid-1", "with-rocket" ] }
ergol_cli = "0.1.9"
uuid = { version = "1.14.0", features = ["serde", "v4"] }
unidecode = "0.3.0"
serde_json = "1.0.139"
infer = "0.19.0"
log = "0.4.26"
chrono = "0.4.39"
tera = "1.20.0"
futures = "0.3.31"
image = "0.25.8"
